# internal/controllers/player_profiles_controller.go
@@ -21,6 +21,14 @@ func NewPlayerProfileController(profilesBaseRepo repository.BaseRepository[model
 	return &PlayerProfileController{profilesBaseRepo: profilesBaseRepo}
 }
 
+// @description Reads all profile
+// @tags profiles
+// @accept json
+// @produce json
+// @success 200 {array} dtos.PlayerProfileReadDTO "returns all profiles"
+// @failure 401 {object} dtos.ErrResp "unauthorized"
+// @failure 500 {object} dtos.ErrResp "internal server error"
+// @router /profiles [get]
 func (pc PlayerProfileController) ReadAll(c *gin.Context) {
 	profiles, err := pc.profilesBaseRepo.ReadAll(c.Request.Context())
 	if err != nil {
@@ -31,6 +39,16 @@ func (pc PlayerProfileController) ReadAll(c *gin.Context) {
 	c.JSON(http.StatusOK, utils.Map(profiles, dtos.PlayerProfileToReadDTO))
 }
 
+// @description Reads a user by it's id
+// @tags profiles
+// @accept json
+// @produce json
+// @param id path int true "the id of the desired profile"
+// @success 200 {object} dtos.PlayerProfileReadDTO "returns the desired profile"
+// @failure 401 {object} dtos.ErrResp "unauthorized"
+// @failure 404 {object} dtos.ErrResp "record not found"
+// @failure 500 {object} dtos.ErrResp "internal server error"
+// @router /profiles/{id} [get]
 func (pc PlayerProfileController) ReadByID(c *gin.Context) {
 	id, _ := c.Get("id")
 	path := c.Request.URL.Path
@@ -47,6 +65,17 @@ func (pc PlayerProfileController) ReadByID(c *gin.Context) {
 	c.JSON(http.StatusOK, dtos.PlayerProfileToReadDTO(profile))
 }
 
+// @description Creates a new profile
+// @tags profiles
+// @accept json
+// @produce json
+// @param profile_create_dto body dtos.PlayerProfileCreateDTO true "dto for creating a new profile"
+// @success 201 {object} dtos.PlayerProfileReadDTO "returns newly created profile"
+// @failure 400 {object} dtos.ErrResp "request body in wrong format"
+// @failure 401 {object} dtos.ErrResp "unauthorized"
+// @failure 409 {object} dtos.ErrResp "unique key violation"
+// @failure 500 {object} dtos.ErrResp "internal server error"
+// @router /profiles [post]
 func (pc PlayerProfileController) Create(c *gin.Context) {
 	path := c.Request.URL.Path
 	var body dtos.PlayerProfileCreateDto
@@ -67,6 +96,20 @@ func (pc PlayerProfileController) Create(c *gin.Context) {
 	c.JSON(http.StatusCreated, newProfile)
 }
 
+// @description Updates the profile with the given id
+// @tags profiles
+// @accept json
+// @produce json
+// @param profile_update_dto body dtos.PlayerProfileUpdateDTO true "dto for updating a profile"
+// @param id path int true "id of desired profile"
+// @success 204 {} nil "doesn't return anything"
+// @failure 400 {object} dtos.ErrResp "request body in wrong format"
+// @failure 400 {object} dtos.ErrResp "id from url and id from request body doesn't match"
+// @failure 401 {object} dtos.ErrResp "unauthorized"
+// @failure 404 {object} dtos.ErrResp "record not found"
+// @failure 409 {object} dtos.ErrResp "unique key violation"
+// @failure 500 {object} dtos.ErrResp "internal server error"
+// @router /profiles/{id} [put]
 func (pc PlayerProfileController) Update(c *gin.Context) {
 	path := c.Request.URL.Path
 	id, _ := c.Get("id")
@@ -98,6 +141,16 @@ func (pc PlayerProfileController) Update(c *gin.Context) {
 	c.Status(http.StatusNoContent)
 }
 
+// @description Deletes a profile with the given id
+// @tags profiles
+// @accept json
+// @produce json
+// @param id path int true "id of desired profile"
+// @success 204 {} nil "doesn't return anything"
+// @failure 401 {object} dtos.ErrResp "unauthorized"
+// @failure 404 {object} dtos.ErrResp "record not found"
+// @failure 500 {object} dtos.ErrResp "internal server error"
+// @router /profiles/{id} [delete]
 func (pc PlayerProfileController) Delete(c *gin.Context) {
 	id, _ := c.Get("id")
 	path := c.Request.URL.Path
